Use libdrm_amdgpu as an alternative GPU load information source

--- a/data/MangoHud.conf
+++ b/data/MangoHud.conf
@@ -327,6 +327,9 @@ text_outline
 ### Don't swap origin if using GL_UPPER_LEFT. Helps with Ryujinx
 # gl_dont_flip=1
 
+### Use libdrm_amdgpu to calculate GPU utilization. Helps with some problematic Vega GPUs.
+# libdrm_sampling
+
 ################ INTERACTION #################
 
 ### Change toggle keybinds for the hud & logging
