--- a/meson.build
+++ b/meson.build
@@ -90,10 +90,14 @@ if is_unixy
       required: get_option('with_wayland'), version : '>=1.11')
   dbus_dep = dependency('dbus-1', required: get_option('with_dbus')).partial_dependency(compile_args : true, includes : true)
   dep_xkb = dependency('xkbcommon', required: get_option('with_wayland'))
+  libdrm_dep = dependency('libdrm')
+  libdrm_amdgpu_dep = dependency('libdrm_amdgpu')
 else
   dep_x11 = null_dep
   dep_wayland_client = null_dep
   dbus_dep = null_dep
+  libdrm_dep = null_dep
+  libdrm_amdgpu_dep = null_dep
 endif
 
 if dep_x11.found()
@@ -112,6 +116,7 @@ endif
 
 inc_common = [
     include_directories('include'),
+    include_directories('/usr/include/libdrm')
 ]
 
 dep_pthread = dependency('threads')
@@ -276,7 +281,7 @@ if get_option('tests').enabled()
 
   e = executable('amdgpu', 'tests/test_amdgpu.cpp',
     files(
-      'src/amdgpu.cpp',
+      'src/amdgpu_metrics.cpp',
       'src/cpu.cpp',
       'src/gpu.cpp',
       'src/mesa/util/os_time.c',
