--- a/meson.build
+++ b/meson.build
@@ -90,10 +90,14 @@ if is_unixy
       required: get_option('with_wayland'), version : '>=1.11')
   dbus_dep = dependency('dbus-1', required: get_option('with_dbus')).partial_dependency(compile_args : true, includes : true)
   dep_xkb = dependency('xkbcommon', required: get_option('with_wayland'))
+  libdrm_dep = dependency('libdrm')
+  libdrm_amdgpu_dep = dependency('libdrm_amdgpu')
 else
   dep_x11 = null_dep
   dep_wayland_client = null_dep
   dbus_dep = null_dep
+  libdrm_dep = null_dep
+  libdrm_amdgpu_dep = null_dep
 endif
 
 if dep_x11.found()
