--- a/src/meson.build
+++ b/src/meson.build
@@ -90,6 +90,7 @@ if is_unixy
     'control.cpp',
     'device.cpp',
     'amdgpu.cpp',
+    'amdgpu_libdrm.cpp',
     'intel.cpp',
     'msm.cpp',
     'net.cpp',
@@ -203,7 +204,9 @@ mangohud_static_lib = static_library(
     dep_vulkan,
     windows_deps,
     json_dep,
-    implot_dep],
+    implot_dep,
+    libdrm_dep,
+    libdrm_amdgpu_dep,],
   include_directories : [inc_common],
   link_args : link_args,
   install_dir : libdir_mangohud,
@@ -308,7 +311,9 @@ if get_option('mangoapp')
       glfw3_dep,
       json_dep,
       glew_dep,
-      implot_dep
+      implot_dep,
+      libdrm_dep,
+      libdrm_amdgpu_dep,
     ],
     include_directories : [inc_common],
     install_tag : 'mangoapp',
